--- a/src/index.css
+++ b/src/index.css
@@ -25,11 +25,9 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  padding: 0;
 }
+
 
 button {
   border: 1px solid transparent;
